tests/sources/invalid/types/type_errors_comprehensive.fire
// Comprehensive type error tests
// These should all produce semantic/type checking errors

import @firescript/std.io.println;

// Type mismatch in variable declaration
num: int32 = "string value";  //~ ERROR FS-SEM-0002 @1

// Type mismatch in assignment
value: int32 = 10;
value = "cannot assign string";  //~ ERROR FS-SEM-0002 @1

// Incompatible types in arithmetic
text: string = "hello";
number: int32 = 42;
bad_add: int32 = text + number;  //~ ERROR FS-SEM-0010 @23

// Incompatible types in array literal
mixed: int32[] = [1, 2, "three", 4];

// Array element type mismatch
numbers: int32[] = [1, 2, 3];
numbers[0] = "string";

// Function argument type mismatch
fn takesInt(x: int32) -> void {
    println(x);
}
takesInt("wrong type");

// Function return type mismatch
fn shouldReturnInt() -> int32 {
    return "string";
}

// Cannot index non-array
not_array: int32 = 5;
bad_index: int32 = not_array[0];  //~ ERROR FS-SEM-0010 @20

// Cannot index with non-integer
nums: int32[] = [1, 2, 3];
elem: int32 = nums["string index"];  //~ ERROR FS-SEM-0010 @20

// Undefined variable
println(undefined_var);  //~ ERROR FS-PARSE-0003 @9

// Undefined function
undefinedFunction(1, 2, 3);

// Wrong number of function arguments
fn needsTwo(a: int32, b: int32) -> void {
    println(a);
}
needsTwo(1);  // Too few
needsTwo(1, 2, 3);  // Too many

// Non-boolean condition in if
if (5) {  //~ ERROR FS-SEM-0010 @5
    println("five is not a boolean");
}

// Non-boolean condition in while  
while (42) {  //~ ERROR FS-SEM-0010 @8
    println("loop");
}

// Cannot call non-function
not_func: int32 = 10;
not_func(5);

// Duplicate variable declaration
duplicate: int32 = 1;
duplicate: int32 = 2;  //~ ERROR FS-SEM-0010 @1

// Assigning to const (if consts are implemented)
// const int32 constant = 100;
// constant = 200;
